renderizando qrcode no html

--- a/src/views/qrcode.ejs
+++ b/src/views/qrcode.ejs
@@ -7,6 +7,7 @@
   <title>API Pix | GerenciaNet | Programador a Bordo</title>
 </head>
 <body>
-  
+  <h1>QR code</h1> 
+  <img src="<%= qrcodeImage %>">
 </body>
 </html>
